--- a/themes/dark.css
+++ b/themes/dark.css
@@ -16,6 +16,10 @@ limitations under the License.
 
 body { background-color: #402817; text-align: center; font-family: helvetica,arial,sans-serif; margin: 0; padding: 0; }
 
+.formError { display: none; color: #FF0000; }
+
+fieldset { text-align: right; }
+
 #header { background-color: #402817; background-image: url("/images/back-header.png"); background-position: center top; background-repeat: no-repeat; height: 100px; }
 
 #logo { background-image: url("/images/logo-mongoDB.png"); height: 90px; width: 217px; }
@@ -39,4 +43,19 @@ body { background-color: #402817; text-align: center; font-family: helvetica,ari
 #footer a:hover { text-decoration: underline; }
 
 #footer a:visited { color: #F6F4CD;  }
+
+/* Options page */
+
+#optionsContainer { padding-top: 20px; width: 780px; margin: 0px auto; }
+
+#addHost { margin-bottom: 20px; }
+
+#addHostContainer { display: none; margin-left: auto; margin-right: auto; padding: 35px; }
+#addHostForm { width: 338px; margin:0px auto;  }
+
+#addHostSubmit { margin-right: 7px; }
+
+#addHostFormErrorMsgs { margin-bottom: 20px; }
+
+
 
